--- a/backend/market-service/Dockerfile
+++ b/backend/market-service/Dockerfile
@@ -4,6 +4,7 @@ COPY pom.xml .
 COPY common/pom.xml common/pom.xml
 COPY eureka-server/pom.xml eureka-server/pom.xml
 COPY api-gateway/pom.xml api-gateway/pom.xml
+COPY user-service/pom.xml user-service/pom.xml
 COPY market-service/pom.xml market-service/pom.xml
 RUN mvn dependency:go-offline -pl market-service -am
 COPY common/src common/src
