refactor: consolidate configs, enhance security & observability
**Common Module Enhancements:**
- Added JpaAuditingConfig for centralized JPA auditing
- Added CommonJwtDecoder for shared JWT validation
- Added OpenTelemetryConfig for distributed tracing
- Enhanced RabbitMQConfig with payment notification support
- Improved LoggingConfig and rate limiting interceptor

**Security Improvements:**
- Updated SecurityConfig across all microservices
- Consolidated OpenApiConfig into common module (removed duplicates)
- Enhanced JWT authentication filter in API Gateway

**Observability Upgrades:**
- Added Jaeger for distributed tracing
- Added Golden Signals dashboard for SRE monitoring
- Configured alerting rules in Grafana
- Updated Prometheus and datasource configurations

**Service Updates:**
- Trade Service: Enhanced execution logic and state machine
- Notification Service: Added PaymentEventListener
- Order Service: Updated event publisher
- Portfolio Service: Improved service layer

**Frontend:**
- Removed deprecated LightweightChart component
- Updated Ticker component

**Documentation:**
- Updated README with Trade Service tests
- Added Jaeger to observability section
- Added Golden Signals dashboard documentation

--- a/backend/api-gateway/src/main/resources/application.yml
+++ b/backend/api-gateway/src/main/resources/application.yml
@@ -162,13 +162,15 @@ management:
         enabled: true
     tags:
       application: ${spring.application.name}
-  # Disable Zipkin tracing (using PLG stack instead)
-  zipkin:
-    tracing:
-      enabled: false
+  # OpenTelemetry Tracing Configuration
   tracing:
+    enabled: true
     sampling:
-      probability: 0.0
+      probability: ${OTEL_TRACES_SAMPLER_ARG:1.0}
+  otlp:
+    tracing:
+      endpoint: ${OTEL_EXPORTER_OTLP_ENDPOINT:http://localhost:4318/v1/traces}
+      transport: http
 
 # JWT Configuration (must match user-service)
 jwt:
