--- a/backend/docker-compose-services.yml
+++ b/backend/docker-compose-services.yml
@@ -189,6 +189,28 @@ services:
       loki:
         condition: service_healthy
 
+  # ============================================
+  # Jaeger (distributed tracing)
+  # ============================================
+  jaeger:
+    image: jaegertracing/all-in-one:1.52
+    container_name: jaeger
+    ports:
+      - "16686:16686" # Jaeger UI
+      - "4317:4317" # OTLP gRPC
+      - "4318:4318" # OTLP HTTP
+      - "14250:14250" # Model proto
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+      - LOG_LEVEL=info
+    networks:
+      - winvestco-network
+    healthcheck:
+      test: [ "CMD", "wget", "-q", "-O", "-", "http://localhost:14269/" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
 # ============================================
 # Persistent Volumes
 # ============================================
