--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -35,6 +35,10 @@
         <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
         <postgresql.version>42.7.3</postgresql.version>
         <flyway.version>10.7.1</flyway.version>
+        <!-- OpenTelemetry Versions -->
+        <opentelemetry.version>1.34.1</opentelemetry.version>
+        <opentelemetry-instrumentation.version>2.1.0</opentelemetry-instrumentation.version>
+        <micrometer-tracing.version>1.2.2</micrometer-tracing.version>
     </properties>
     
     <modules>
@@ -78,6 +82,22 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            
+            <!-- OpenTelemetry BOM -->
+            <dependency>
+                <groupId>io.opentelemetry</groupId>
+                <artifactId>opentelemetry-bom</artifactId>
+                <version>${opentelemetry.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.opentelemetry.instrumentation</groupId>
+                <artifactId>opentelemetry-instrumentation-bom</artifactId>
+                <version>${opentelemetry-instrumentation.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
