--- a/backend/trade-service/src/main/resources/application.yml
+++ b/backend/trade-service/src/main/resources/application.yml
@@ -2,6 +2,10 @@ spring:
   application:
     name: trade-service
   
+  logging:
+    level:
+      org.flywaydb: DEBUG
+  
   # Virtual Threads (Java 21+)
   threads:
     virtual:
@@ -22,7 +26,7 @@ spring:
   
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: false
     properties:
       hibernate:
@@ -74,6 +78,15 @@ management:
         enabled: true
     tags:
       application: ${spring.application.name}
+  # OpenTelemetry Tracing Configuration
+  tracing:
+    enabled: true
+    sampling:
+      probability: ${OTEL_TRACES_SAMPLER_ARG:1.0}
+  otlp:
+    tracing:
+      endpoint: ${OTEL_EXPORTER_OTLP_ENDPOINT:http://localhost:4318/v1/traces}
+      transport: http
 
 # JWT Configuration (must match other services)
 jwt:
