feat: Add Resilience4j fault tolerance, Mock Execution Engine, Wallet & Trades pages
Backend:
- Add Resilience4j integration across services (Circuit Breaker, Rate Limiter, Retry, Bulkhead, TimeLimiter)
- Implement exponential backoff with jitter for retries
- Add NonRetryableException for bad request handling
- Add FeignAuthConfig for inter-service authentication
- Add ResilienceEventLogger for observability
- Add LedgerClientFallback for graceful degradation
- Add MockExecutionEngine for trade simulation in trade-service
- Add AsyncConfig and MockExecutionProperties
- Add Feign clients for trade-service

Frontend:
- Add Wallet.jsx page with balance view and transaction history
- Add Trades.jsx page for trade management
- Add fundsApi.js, paymentApi.js, tradeApi.js API services
- Update App.jsx with new routes
- Update Navbar with new navigation links
- Update Footer, Signup.css, StockDetails.css styling

Tests:
- Add unit tests for common module
- Add unit tests for funds-service
- Add unit tests for market-service client
- Add unit tests for trade-service

Documentation:
- Update README with Resilience4j features
- Document Mock Execution Engine
- Add Wallet.jsx and Trades.jsx to project structure
- Add API service files to project structure

--- a/backend/order-service/src/main/resources/application.yml
+++ b/backend/order-service/src/main/resources/application.yml
@@ -62,6 +62,11 @@ management:
       show-details: always
     prometheus:
       enabled: true
+  health:
+    circuitbreakers:
+      enabled: true
+    prometheus:
+      enabled: true
   metrics:
     export:
       prometheus:
@@ -109,3 +114,73 @@ logging:
   level:
     in.winvestco: DEBUG
     org.springframework.security: DEBUG
+    io.github.resilience4j: INFO
+
+# Resilience4j Configuration
+resilience4j:
+  # Circuit Breaker - Fail-fast when market-service is unhealthy
+  circuitbreaker:
+    configs:
+      default:
+        slidingWindowType: COUNT_BASED
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        failureRateThreshold: 50
+        slowCallRateThreshold: 80
+        slowCallDurationThreshold: 2s
+        waitDurationInOpenState: 30s
+        permittedNumberOfCallsInHalfOpenState: 3
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        recordExceptions:
+          - java.io.IOException
+          - java.net.SocketTimeoutException
+          - feign.FeignException$ServiceUnavailable
+          - feign.FeignException$InternalServerError
+        ignoreExceptions:
+          - feign.FeignException$BadRequest
+          - feign.FeignException$NotFound
+          - in.winvestco.common.exception.NonRetryableException
+    instances:
+      marketService:
+        baseConfig: default
+
+  # Retry - Exponential Backoff with Jitter
+  retry:
+    configs:
+      default:
+        maxAttempts: 3
+        waitDuration: 500ms
+        enableExponentialBackoff: true
+        exponentialBackoffMultiplier: 2
+        enableRandomizedWait: true
+        randomizedWaitFactor: 0.5
+        retryExceptions:
+          - java.io.IOException
+          - java.net.SocketTimeoutException
+          - feign.RetryableException
+        ignoreExceptions:
+          - feign.FeignException$BadRequest
+          - feign.FeignException$NotFound
+          - feign.FeignException$Unauthorized
+          - in.winvestco.common.exception.NonRetryableException
+    instances:
+      marketService:
+        baseConfig: default
+
+  # Bulkhead - Resource Isolation
+  bulkhead:
+    configs:
+      default:
+        maxConcurrentCalls: 20
+        maxWaitDuration: 100ms
+    instances:
+      marketService:
+        baseConfig: default
+
+  # TimeLimiter - Timeout Control
+  timelimiter:
+    instances:
+      marketService:
+        timeoutDuration: 3s
+        cancelRunningFuture: true
+
