--- a/backend/funds-service/pom.xml
+++ b/backend/funds-service/pom.xml
@@ -81,6 +81,16 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         
+        <!-- Resilience4j for fault tolerance (Circuit Breaker, Retry, Bulkhead, RateLimiter) -->
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-spring-boot3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        
         <!-- RabbitMQ for event-driven communication -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
