--- a/backend/funds-service/src/main/resources/application.yml
+++ b/backend/funds-service/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
   # JPA/Hibernate properties
   jpa:
     hibernate:
-      ddl-auto: ${SPRING_JPA_HIBERNATE_DDL_AUTO:validate}
+      ddl-auto: ${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
     show-sql: true
     properties:
       hibernate:
@@ -122,3 +122,75 @@ logging:
 jwt:
   secret: ${JWT_SECRET:dev-secret-key-for-local-development-only-change-in-production-minimum-256-bits}
   expiration: ${JWT_EXPIRATION:86400000}
+
+# Resilience4j Configuration
+resilience4j:
+  # Circuit Breaker - Stricter thresholds for financial ledger-service
+  circuitbreaker:
+    configs:
+      default:
+        slidingWindowType: COUNT_BASED
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        failureRateThreshold: 50
+        slowCallRateThreshold: 80
+        slowCallDurationThreshold: 2s
+        waitDurationInOpenState: 30s
+        permittedNumberOfCallsInHalfOpenState: 3
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        recordExceptions:
+          - java.io.IOException
+          - java.net.SocketTimeoutException
+          - feign.FeignException$ServiceUnavailable
+          - feign.FeignException$InternalServerError
+        ignoreExceptions:
+          - feign.FeignException$BadRequest
+          - feign.FeignException$NotFound
+          - in.winvestco.common.exception.NonRetryableException
+    instances:
+      ledgerService:
+        baseConfig: default
+        failureRateThreshold: 30
+        waitDurationInOpenState: 60s
+
+  # Retry - Fewer retries for financial operations
+  retry:
+    configs:
+      default:
+        maxAttempts: 3
+        waitDuration: 500ms
+        enableExponentialBackoff: true
+        exponentialBackoffMultiplier: 2
+        enableRandomizedWait: true
+        randomizedWaitFactor: 0.5
+        retryExceptions:
+          - java.io.IOException
+          - java.net.SocketTimeoutException
+          - feign.RetryableException
+        ignoreExceptions:
+          - feign.FeignException$BadRequest
+          - feign.FeignException$NotFound
+          - feign.FeignException$Unauthorized
+          - in.winvestco.common.exception.NonRetryableException
+    instances:
+      ledgerService:
+        baseConfig: default
+        maxAttempts: 2
+
+  # Bulkhead - Tighter resource isolation for financial operations
+  bulkhead:
+    configs:
+      default:
+        maxConcurrentCalls: 20
+        maxWaitDuration: 100ms
+    instances:
+      ledgerService:
+        maxConcurrentCalls: 10
+        maxWaitDuration: 50ms
+
+  # TimeLimiter - Longer timeout for ledger operations
+  timelimiter:
+    instances:
+      ledgerService:
+        timeoutDuration: 5s
+        cancelRunningFuture: true
