--- a/backend/ledger-service/src/main/resources/application.yml
+++ b/backend/ledger-service/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
   # JPA/Hibernate properties
   jpa:
     hibernate:
-      ddl-auto: ${SPRING_JPA_HIBERNATE_DDL_AUTO:validate}
+      ddl-auto: ${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
     show-sql: true
     properties:
       hibernate:
