--- a/backend/market-service/pom.xml
+++ b/backend/market-service/pom.xml
@@ -89,6 +89,20 @@
             <artifactId>caffeine</artifactId>
         </dependency>
 
+        <!-- Resilience4j for fault tolerance (Circuit Breaker, Retry, RateLimiter for NSE API) -->
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-spring-boot3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
