--- a/backend/market-service/src/main/resources/application.yml
+++ b/backend/market-service/src/main/resources/application.yml
@@ -95,3 +95,82 @@ management:
     tracing:
       endpoint: ${OTEL_EXPORTER_OTLP_ENDPOINT:http://localhost:4318/v1/traces}
       transport: http
+  health:
+    circuitbreakers:
+      enabled: true
+
+# Logging
+logging:
+  level:
+    in.winvestco: DEBUG
+    io.github.resilience4j: INFO
+
+# Resilience4j Configuration for external NSE API
+resilience4j:
+  # Circuit Breaker - Protect from NSE API failures
+  circuitbreaker:
+    configs:
+      default:
+        slidingWindowType: COUNT_BASED
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        failureRateThreshold: 50
+        slowCallRateThreshold: 80
+        slowCallDurationThreshold: 5s
+        waitDurationInOpenState: 60s
+        permittedNumberOfCallsInHalfOpenState: 2
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        recordExceptions:
+          - java.io.IOException
+          - java.net.SocketTimeoutException
+          - org.springframework.web.client.ResourceAccessException
+          - org.springframework.web.client.HttpServerErrorException
+        ignoreExceptions:
+          - org.springframework.web.client.HttpClientErrorException$BadRequest
+          - org.springframework.web.client.HttpClientErrorException$NotFound
+    instances:
+      nseApi:
+        baseConfig: default
+
+  # Rate Limiter - Protect NSE API from overwhelming traffic
+  ratelimiter:
+    instances:
+      nseApi:
+        limitForPeriod: 10
+        limitRefreshPeriod: 1s
+        timeoutDuration: 500ms
+
+  # Retry - Exponential Backoff with Jitter for transient NSE failures
+  retry:
+    configs:
+      default:
+        maxAttempts: 3
+        waitDuration: 1s
+        enableExponentialBackoff: true
+        exponentialBackoffMultiplier: 2
+        enableRandomizedWait: true
+        randomizedWaitFactor: 0.5
+        retryExceptions:
+          - java.io.IOException
+          - java.net.SocketTimeoutException
+          - org.springframework.web.client.ResourceAccessException
+        ignoreExceptions:
+          - org.springframework.web.client.HttpClientErrorException$BadRequest
+          - org.springframework.web.client.HttpClientErrorException$NotFound
+    instances:
+      nseApi:
+        baseConfig: default
+
+  # Bulkhead - Limit concurrent NSE API calls
+  bulkhead:
+    instances:
+      nseApi:
+        maxConcurrentCalls: 5
+        maxWaitDuration: 200ms
+
+  # TimeLimiter - Timeout for NSE API calls
+  timelimiter:
+    instances:
+      nseApi:
+        timeoutDuration: 10s
+        cancelRunningFuture: true
