--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -39,6 +39,8 @@
         <opentelemetry.version>1.34.1</opentelemetry.version>
         <opentelemetry-instrumentation.version>2.1.0</opentelemetry-instrumentation.version>
         <micrometer-tracing.version>1.2.2</micrometer-tracing.version>
+        <!-- Resilience4j -->
+        <resilience4j.version>2.2.0</resilience4j.version>
     </properties>
     
     <modules>
@@ -98,6 +100,15 @@
                 <groupId>io.opentelemetry.instrumentation</groupId>
                 <artifactId>opentelemetry-instrumentation-bom</artifactId>
                 <version>${opentelemetry-instrumentation.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            
+            <!-- Resilience4j BOM -->
+            <dependency>
+                <groupId>io.github.resilience4j</groupId>
+                <artifactId>resilience4j-bom</artifactId>
+                <version>${resilience4j.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
