--- a/backend/common/pom.xml
+++ b/backend/common/pom.xml
@@ -57,6 +57,13 @@
             <version>1.5.1</version>
         </dependency>
 
+        <!-- Logstash Logback Encoder for JSON structured logging -->
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>7.4</version>
+        </dependency>
+
         <!-- Spring Security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
