feat(report-service): Add async report generation service with Event Sourcing
- Add new report-service module for P&L, Tax, Transaction, Holdings, and Trade reports
- Implement Event Sourcing pattern with projection tables for decoupled data access
- Support PDF (iText), Excel (Apache POI), and CSV (OpenCSV) output formats
- Add async report generation with RabbitMQ job processing
- Create frontend Reports page with report generation and download UI

New files:
- backend/report-service/ - Complete microservice module
- 3 report enums: ReportType, ReportStatus, ReportFormat
- 2 domain events: ReportCompletedEvent, ReportFailedEvent
- frontend/src/pages/Reports.jsx - React page component
- frontend/src/services/reportApi.js - API service

Modified files:
- backend/pom.xml - Added report-service module
- RabbitMQConfig.java - Added report projection queues
- API Gateway - Added /api/reports/** route
- docker-compose.yml - Added report-service container
- App.jsx - Added /reports route

--- a/backend/api-gateway/src/main/resources/application.yml
+++ b/backend/api-gateway/src/main/resources/application.yml
@@ -134,6 +134,15 @@ spring:
           predicates:
             - Path=/ws/notifications/**
 
+        # Report Service routes
+        - id: report-service
+          uri: lb://report-service
+          predicates:
+            - Path=/api/reports/**
+          filters:
+            - RemoveRequestHeader=Cookie
+            - TokenRelay=
+
 server:
   port: 8090
 
