--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -56,6 +56,7 @@
         <module>trade-service</module>
         <module>notification-service</module>
         <module>payment-service</module>
+        <module>report-service</module>
     </modules>
     
     <dependencyManagement>
