Implement consistent Bean Validation and standardize microservice applications
- Updated GlobalExceptionHandler to handle MethodArgumentNotValidException for consistent error reporting.
- Standardized @SpringBootApplication configuration across all microservices.
- Added @Valid to missing controller endpoints.
- Fixed non-parseable pom.xml in report-service.
- Fixed compilation error in ResilienceEventLogger and added unit tests for GlobalExceptionHandler.

--- a/backend/report-service/pom.xml
+++ b/backend/report-service/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>report-service</artifactId>
     <name>Report Service</name>
-    <description>Async report generation service for P&L, Tax, and Transaction reports</description>
+    <description>Async report generation service for P&amp;amp;L, Tax, and Transaction reports</description>
 
     <properties>
         <spring-cloud.version>2023.0.0</spring-cloud.version>
