feat: enhance message queue reliability and add comprehensive unit tests
## Message Queue Reliability
- Add BaseEvent abstract class with correlationId and timestamp for tracing/deduplication
- Implement IdempotencyService to prevent duplicate event processing
- Add OutboxService and OutboxProcessor for guaranteed event delivery
- Configure RabbitMQ retry interceptor with exponential backoff (1s-10s, 2x multiplier)
- Implement DLQ republisher for failed message handling

## SAGA Compensation Logic
- Add OrderRejectedEvent handler in OrderService for insufficient funds
- Implement TradeFailedEvent and OrderCancelledEvent handlers in FundsService
- Add OrderCancelledEvent handler in TradeService for trade cancellation
- Update all event classes to extend BaseEvent

## Comprehensive Unit Tests (26 test classes)
- Common: GlobalExceptionHandler, ResourceNotFoundException, LoggingUtils tests
- User Service: AuthController, UserService, JwtService, RegisterRequest tests
- Market Service: MarketDataService, NseClientResilience tests
- Funds Service: WalletService, LedgerClientFallback tests
- Order/Trade/Portfolio/Payment/Notification/Report Service tests
- Observability tests for metrics and tracing

## Documentation
- Update README with SAGA Pattern Architecture diagram
- Add Message Queue Reliability Infrastructure documentation
- Document all 26 test classes in Test Coverage section
- Add messaging package to project structure
- Include ADR-0011 for environment-specific profiles

## Other Improvements
- Fix event publisher signatures across services
- Update RabbitMQ config with retry chain
- Add business metrics dashboard config

--- a/backend/common/pom.xml
+++ b/backend/common/pom.xml
@@ -201,6 +201,12 @@
             <artifactId>opentelemetry-exporter-otlp</artifactId>
         </dependency>
 
+        <!-- Micrometer Observation for custom spans -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-observation</artifactId>
+        </dependency>
+
         <!-- Micrometer Tracing Bridge for OpenTelemetry -->
         <dependency>
             <groupId>io.micrometer</groupId>
