--- a/backend/market-service/src/main/resources/application.yml
+++ b/backend/market-service/src/main/resources/application.yml
@@ -39,7 +39,7 @@ spring:
   # JPA Configuration
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: false
     properties:
       hibernate:
